<resources>
    <string name="app_name">HomeChef</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="grocery_list">Grocery List</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saving">Saving...</string>
    <string name="add_new_recipe">Add Recipe</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="enter_recipe_title">Enter Recipe Title</string>
    <string name="enter_instruction">Enter Instruction</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="ingredient_item_format">• </string>
    <string name="add_item">Add Item</string>
    <string name="enter_here">Enter here...</string>
    <string name="cancel">Cancel</string>
    <string name="favorite">Favorite</string>

</resources>