<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGroceryItem">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/functionListLayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/backText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:text="Delete"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/listTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="Title"/>

        <TextView
            android:id="@+id/doneText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="16dp"
            android:text="Done"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <ListView
        android:id="@+id/groceryListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/editItemLayout"
        android:layout_below="@+id/functionListLayout">

    </ListView>

    <LinearLayout
        android:id="@+id/editItemLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/groceryListItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_here"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_addItem"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_addItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:text="@string/add_item"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>


</RelativeLayout>