<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_home"
        android:title="@string/home"
        android:icon="@drawable/ic_baseline_home_24"/>
    <item
        android:id="@+id/bottom_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/baseline_star_24"/>
    <item
        android:id="@+id/bottom_list"
        android:title="@string/grocery_list"
        android:icon="@drawable/ic_baseline_local_grocery_store_24"/>
    <item
        android:id="@+id/bottom_user"
        android:title="@string/profile"
        android:icon="@drawable/ic_baseline_person_24"/>
</menu>